# django-postgresql

./: pyproject.toml
academia/academia/: asgi.py  settings.py  urls.py  views.py  wsgi.py
academia/aplicacion1/: apps.py  models.py  urls.py  views.py
academia/aplicacion1/migrations/: 0001_initial.py  0002_rename_entregadp_pedidos_entregado_and_more.py  0003_delete_articulos_delete_pedidos_and_more.py
academia/aplicacion1/utils/: auth.py
academia/users/: models.py  urls.py  views.py
academia/users/migrations/: 0001_initial.py  0002_rename_emial_usuarios_email.py
